test/files/neg/wellkinded_app.scala
// test well-kindedness checks
class WellKinded[x] {
  type t = x[x]
}
